# bases_de_datos_avanzadas_uvm_010144937

./: README.md  handlers.py  main.py  output.xml  pyproject.toml
centro_de_formacion/: main.py  manage.py
centro_de_formacion/alumnos/: models.py
centro_de_formacion/alumnos/migrations/: 0001_initial.py  0002_alter_alumno_table.py
centro_de_formacion/alumnos_asignaturas/: apps.py  models.py
centro_de_formacion/alumnos_asignaturas/migrations/: 0001_initial.py  0002_alter_alumnos_asignaturas_table.py  0002_rename_profesor_alumnos_asignaturas_alumno.py
centro_de_formacion/asignaturas/: apps.py  models.py
centro_de_formacion/asignaturas/migrations/: 0001_initial.py  0002_alter_asignatura_table.py
centro_de_formacion/centro_de_formacion/: asgi.py  settings.py  urls.py  wsgi.py
centro_de_formacion/personas/: models.py
centro_de_formacion/personas/migrations/: 0001_initial.py  0002_alter_persona_table.py
centro_de_formacion/profesores/: models.py
centro_de_formacion/profesores/migrations/: 0001_initial.py  0002_alter_profesor_table.py
centro_de_formacion/profesores_asignaturas/: apps.py  models.py
centro_de_formacion/profesores_asignaturas/migrations/: 0001_initial.py  0002_alter_profesores_asignaturas_table.py
static/: form.html  output.html
